Console app for getting beneficiary details within a given date range and sync'ing with MCTS (as of now stub, which is configurable).